# stash

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  build.zig  build.zig.zon  dist-workspace.toml  go.mod  go.sum
.github/scripts/: update-homebrew-formula.sh
.github/workflows/: release.yml  update-homebrew-formula.yml
benches/: cli.rs
cmd/: attr.go  attr_test.go  bench_test.go  cat.go  clear.go  cmd_test.go  format.go  index.go  inspect.go  list.go  log.go  log_test.go  ls.go  ls_test.go  metadata.go  path.go  peek.go  pop.go  push.go  rm.go  root.go  tee.go  version.go
core/: Cargo.toml
core/src/: lib.rs
demos/: stash.tape  words.tape
docs/: README.md  agents.md  bash.md  completion.md  examples.md  fish.md  reference.md  stash-config-files.md  stash-vs-tee.md  usage.md  zsh.md
lib/cli/: README.md  cli.zig  completion.zig
lib/stash/: display.zig  format.zig  runtime.zig  stash.zig  store.zig  term.zig
log/: 2026-04-13-implementing-append.md  2026-04-13-size-reduction.md  README.md
misc/: bench-cli-scenario.sh  migrate-meta-json-to-attr
rust/: Cargo.toml  README.md
rust/benches/: cli.rs
rust/src/: cli.rs  json.rs  lib.rs  main.rs  preview.rs  store.rs
scripts/: README.md  bench-cli-scenario.sh  bookmark  chstash.sh  release.sh  rstash  sstash.zsh  stash-copy  stash-fzf.zsh  stash-push-type  stash-rg
src/: app.zig  bookmark_main.zig  cli.rs  cli.zig  cmd.zig  completion.zig  completion_main.rs  completion_main.zig  display.rs  display.zig  lib.rs  main.rs  main.zig  runtime.zig  stashd.rs  stashd_main.rs  store.rs  store.zig  types.zig
src/cmd/: attr.rs  log.rs  ls.rs  mod.rs  path.rs  push.rs  rm.rs
src/store/: attr.rs  cache.rs  mod.rs  push.rs
src_zig/: app.zig  cmd.zig  display.zig  store.zig  types.zig
stash-memory/: SKILL.md  stash-mem
store/: bench_test.go  lock.go  preview.go  preview_test.go  store.go  store_test.go
sync/: Cargo.toml
sync/src/: cache.rs  config.rs  daemon.rs  diagnostics.rs  lib.rs  protocol.rs  snapshot.rs  transport.rs
tests/: cli_binary.rs  completion_bash.sh  completion_fish.fish  completion_zsh.zsh
