[package]
name = "stash-cli"
version = "0.5.4"
edition = "2024"
description = "A local store for pipeline output and ad hoc file snapshots"
license = "MIT"
repository = "https://github.com/vrypan/stash"
homepage = "https://github.com/vrypan/stash"

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.49"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cli"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
