[package]
name = "stash-cli"
version = "0.8.1"
edition = "2024"
description = "A local store for pipeline output and ad hoc file snapshots"
license = "MIT"
repository = "https://github.com/vrypan/stash"
homepage = "https://github.com/vrypan/stash"

[[bin]]
name = "stash"
path = "src/main.rs"

[[bin]]
name = "stash-completion"
path = "src/completion_main.rs"
required-features = ["completion"]

[features]
completion = ["dep:clap_complete"]

[dependencies]
clap = { version = "4.5.40", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context"] }
clap_complete = { version = "4.5.49", optional = true }
rkyv = "0.8.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.4.4"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.5.1"
predicates = "3.1.3"
tempfile = "3.20.0"

[[bench]]
name = "cli"
harness = false

[package.metadata.dist]
features = ["completion"]

[profile.release]
lto = "thin"
strip = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
