[package]
name = "stash-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "stash_sync"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.2"
iroh = "0.96.1"
notify = "8.2.0"
rkyv = "0.8.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
signal-hook = "0.4.4"
stash-core = { path = "../core" }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }

[dev-dependencies]
tempfile = "3.20.0"
